fix: fix bug of cv overlap on contact section on mobile phones

--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ footer, #contacto {
     .cv-cta-button {
         width: 100%; /* El botón de CV ocupa todo el ancho en móvil */
         max-width: none;
-        margin: 20px auto 0;
+        margin: 20px auto 20px;
     }
 }
 
